fix spacing and padding

--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -14,7 +14,6 @@
         @include flexCenter();
         justify-content: space-between;
         padding-top: 1rem;
-        padding-bottom: 2rem;
     }
     &__link-container{
         // @extend .intro-screen__link-container;
