--- a/style/media/_media.scss
+++ b/style/media/_media.scss
@@ -11,7 +11,6 @@
     }
     .desktop--border{
         border-bottom: 1px solid #DEDEDE;
-        padding-bottom: 2.5rem;
     }
  }
 // for tablet
@@ -86,8 +85,6 @@
     }
     //applications
     .application-tools{
-        padding:3rem 0;
-        height: 90%;
         .tool-container {
             height: 60%;
         }
