--- a/style/partials/_tool.scss
+++ b/style/partials/_tool.scss
@@ -2,19 +2,20 @@
     @include flexCenter();
     flex-direction: column;
     width: 100%;
-    height: calc(105vh - 5.6rem);
     .application-title{
         font-size: 36px;
         font-style: normal;
         font-weight: 700;
+        padding-top: 49px;
+        padding-bottom: 40px;
     }
     .tool-container{
         @include flexCenter();
         flex-wrap: wrap;
-        height: 75%;
         width: 80%;
         &__tools{
             width: 32%;
+            padding-bottom: 4rem;
             &--icon{
                 height: 100px;
                 aspect-ratio: 1;
@@ -45,6 +46,7 @@
         font-weight: 500;
         line-height: 146.687%; /* 23.051px */
         letter-spacing: 0.079px;
+        margin-bottom: 50px;
         border-radius: 43px;
         background-color: var(--secondary-background);
         cursor: pointer;
@@ -52,6 +54,7 @@
     }
 }
 
+//for github logo
 .item--backward{
     position: absolute;
     z-index: -1;
